# A-laba_runs_watcher

./: .dockerignore  .env.example  .env.prod.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.example.yml  main.py  pyproject.toml
bot/: bot.py
bot/config/: config.py
bot/db_requests/: db_requests.py
bot/dialogs/: __init__.py
bot/dialogs/another_event_dialog/: dialogs.py  getters.py  handlers.py  states.py
bot/dialogs/electro_dialog/: dialogs.py  getters.py  handlers.py  states.py
bot/dialogs/new_run_dialog/: dialogs.py  getters.py  handlers.py  states.py
bot/dialogs/show_events_dialog/: dialogs.py  getters.py  handlers.py  states.py
bot/dialogs/start_dialog/: dialogs.py  getters.py  handlers.py
bot/dialogs/widgets/: i18n.py
bot/handlers/: __init__.py  user_handlers.py
bot/i18n/: translator_hub.py
bot/keyboards/: menu_buttons.py
bot/middlewares/: albg_shield.py  i18n.py  logging_middleware.py  session.py  track_all_users.py
database/: __init__.py
database/enums/: enums.py
database/migrations/: env.py
database/migrations/versions/: 20250924_1257_initial_revision.py  20250929_0054_user_adder.py  20250929_1043_user_modified.py  20250930_1228_event_name_added.py
database/models/: __init__.py  models.py
locales/ru/LC_BUTTONS/: txt.ftl
locales/ru/LC_MESSAGES/: txt.ftl
redis/: redis.conf
scheduled_tasks/cron_jobs/: send_events_notification
scheduled_tasks/cron_scripts/: send_events_notification.py
